Release 1.15.0 (#134)
* Release 1.15.0

* UserSettings record was not deleted with the user

* Replace Request-Type header with Accept

* ApphubCI - Preproduction Proxy

* Https (#136)

* Use https in apphub-proxy

* Rework webSocket

* WS protocol cache

* apphub-proxy logs to file

* SpringBoot Actuator provides the solution

---------

Co-authored-by: bondabear@gmail.com <Saphy371321>

* VillanyAtesz - Use icons in English for VillanyAtesz

* ApphubCI - Automatic command assignment based on order

* ApphubCI - Preprod release automatically disables roles

* Modules - Collapse module categories

* ApphubCI - Scale down preprod

* ApphubCI - Check if frontend is running before starting integration tests

* Notebook - Delete deprecated tables

* Notebook - Pressing enter during checklist should save current item and add a new one

* Notebook - Bulk operations

* Skyxplore (#138)

* SkyXplore - New building structure

* Compile and run

* Start fixing the UI

* Why the f these files were not committed

* Asd

* SkyXplore - Construct and deconstruct constructionArea

* SkyXplore - Update building overview endpoint to return ConstructionAreas and BuildingModules summary

* SkyXplore - Construct and deconstruct buildingModule

* SkyXplore - Construct and deconstruct buildingModule

* SkyXplore - Generate resources (without energy), Finish construction

* SkyXplore - Fix BE tests

* SkyXplore - Fix FE tests

* SkyXplore - Integration tests for deconstruction constructionArea with building modules present

* SkyXplore - Add new types to CitizenAssignments

* SkyXplore - BE tests for ConstructionArea and BuildingModule Queue

* SkyXplore - TODO cleanup - Part I

* SkyXplore - TODO cleanup - Part II

* SkyXplore - TODO cleanup - Part III

* SkyXplore - TODO cleanup - Part IV

* SkyXplore - TODO cleanup - Part V

---------

Co-authored-by: bondabear@gmail.com <Saphy371321>

* Conflict

