@@ -2,6 +2,7 @@ package com.github.saphyra.apphub.ci.process.local.start;
 
 import com.github.saphyra.apphub.ci.dao.PropertyDao;
 import com.github.saphyra.apphub.ci.value.DeployMode;
+import com.github.saphyra.apphub.ci.value.PlatformProperties;
 import com.github.saphyra.apphub.ci.value.Service;
 import com.github.saphyra.apphub.ci.value.Services;
 import lombok.RequiredArgsConstructor;
@@ -12,6 +13,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Component
 @RequiredArgsConstructor
@@ -19,11 +21,16 @@ import java.util.stream.Collectors;
 public class LocalBuildTask {
     private final PropertyDao propertyDao;
     private final Services services;
+    private final PlatformProperties platformProperties;
 
     public boolean buildServices() {
         List<String> disabledServices = propertyDao.getDisabledServices();
 
-        return buildServices(services.getServices().stream().filter(service -> !disabledServices.contains(service.getName())).map(Service::getModuleName).toList());
+        List<String> moduleNames = services.getServices().stream()
+            .filter(service -> !disabledServices.contains(service.getName())).map(Service::getModuleName)
+            .toList();
+        List<String> withIntegrationServer = Stream.concat(moduleNames.stream(), Stream.of(platformProperties.getIntegrationServer().getModuleName())).collect(Collectors.toList());
+        return buildServices(withIntegrationServer);
     }
 
     public boolean buildServices(String[] serviceNames) {
